[package]
name = "spatial_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"

[dev-dependencies]
criterion = "0.4.0"
rand ={version="0.8.5", features=['small_rng']}

rand_derive = "0.5.0"
[[bench]]
name = "spatial_hash"
harness = false
