[package]
name = "spatial_hash_3d"
version = "0.1.3"
edition = "2021"
authors = ["Alexander Pyattaev", "Igor Bologov"]
description = "3D spatial hash grid implementation optimized for speed. What it does/why you'd want one: https://www.youtube.com/watch?v=sx4IIQL0x7c"
repository = "https://github.com/alexpyattaev/spatialhash"
readme = "README.md"
license = "GPL-2.0-or-later"
keywords = [ "spatial", "3D", "gamedev"]
categories = ["data-structures", "game-development","graphics"]
documentation = "https://docs.rs/spatial_hash_3d/"
[lib]


[dependencies]
cgmath = "~0.18"
itertools = "~0.10"

[dev-dependencies]
criterion = "~0.5"
rand ={version="~0.8", features=['small_rng']}
rand_derive = "~0.5"

[[bench]]
name = "spatial_hash"
harness = false
